@@ -126,7 +126,6 @@ static int   run_exit;
 /* external prototypes */
 
 extern int pe_input(char *);
-extern int TTmpDirName(job *, char *);
 extern void encode_used(job *, int, tlist_head *);
 #ifdef ENABLE_CSA
 extern void add_wkm_end(uint64_t, int64_t, char *);
@@ -1013,7 +1012,7 @@ int run_pelog(
         }
       }  /* END if (r != NULL) */
 
-    if (TTmpDirName(pjob, buf))
+    if (TTmpDirName(pjob, buf, sizeof(buf)))
       {
       const char *envname = "TMPDIR=";
       char *envstr;
